<?xml version="1.0" encoding="utf-8"?>
<com.rawlin.bottomsheet.multi_bottom_sheets.MultiBottomSheetView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_main_sheet_background">


        <TextView
            android:id="@+id/textView"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/how_much_do_you_need"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/move_the_dial"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DEMO VIEW"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/bottom_sheet1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_peekHeight="64dp"
        app:layout_behavior=".multi_bottom_sheets.MultiBottomSheetBehaviour"
        tools:ignore="MissingPrefix">

        <!--View One-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/sheet1PeekView"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@drawable/top_sheet_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Proceed to EMI selection"
                    android:textColor="@color/copper_text_color"
                    android:textSize="18sp" />

            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sheet1Container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="64dp"
                android:background="@color/blackish">


                <TextView
                    android:id="@+id/title"
                    style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/how_to_repay"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/choose_plan"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="651dp"
                    android:layout_marginTop="24dp"
                    tools:listitem="@layout/emi_item"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subtitle" />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/sheet1Coordinator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="64dp">

            <LinearLayout
                android:id="@+id/bottom_sheet2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:behavior_peekHeight="64dp"
                app:layout_behavior=".multi_bottom_sheets.MultiBottomSheetBehaviour">

                <FrameLayout
                    android:id="@+id/sheet2PeekView"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@drawable/top_sheet_background">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif"
                        android:text="Select your bank account"
                        android:textColor="@color/copper_text_color"
                        android:textSize="18sp" />

                </FrameLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/sheet2Container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blackish">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/materialCardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/white"
                        app:cardCornerRadius="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/bank"
                            tools:layout_editor_absoluteX="34dp"
                            tools:layout_editor_absoluteY="125dp" />

                    </com.google.android.material.card.MaterialCardView>

                    <club.cred.synth.views.SynthButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:padding="16dp"
                        android:text="@string/tap_for_emi"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:neuButtonType="elevated_soft"
                        app:neuPlatformColor="@color/blackish" />

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:text="@string/bank_title"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:text="@string/bank_sub"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:text="@string/bank_name"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/materialCardView"
                        app:layout_constraintTop_toTopOf="@+id/materialCardView" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/account_number"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/textView6"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_marginEnd="15dp"
                        android:checked="true"
                        android:button="@drawable/custom_checkbox"
                        app:layout_constraintBottom_toBottomOf="@+id/textView7"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView6" />



                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </FrameLayout>

</com.rawlin.bottomsheet.multi_bottom_sheets.MultiBottomSheetView>